--- a/src/assets/language/ru.json
+++ b/src/assets/language/ru.json
@@ -21,35 +21,36 @@
     },
     "kumush": {
         "title": "Кумушай - Инженер-программист и Создатель Гайдов",
-        "description": "Здравствуйте, я Кумушай, увлеченный инженер-программист, в настоящее время работающий в Южной Корее. Мой путь был полон вызовов и возможностей для обучения, от освоения корейского языка и адаптации к новой культуре до получения работы на конкурентном рынке. Мое первое предложение о работе поступило еще до участия в Global Talent Fair, и теперь я с нетерпением хочу поделиться с вами своим опытом и инсайтами.",
+        "description": "Привет! Я Кумуш, инженер-программист в Сеуле, Южная Корея. После окончания факультета компьютерных наук в Университете Чонджу, как и многие иностранные студенты, я столкнулась с трудностями в поиске работы в Корее. Но, изучив корейский подход к трудоустройству и благодаря участию в KOTRA Global Talent Fair, я смогла получить несколько предложений о работе. Теперь я здесь, чтобы поделиться своим опытом и помочь вам найти работу в Корее!",
         "offer": {
             "title": "Что я могу предложить:",
-            "1": "Личный опыт: Я получила несколько предложений о работе до окончания учебы.",
-            "2": "Руководство по корейскому рынку труда: Я прошла весь процесс поиска работы, от подготовки документов до успешного прохождения собеседований.",
-            "3": "Пошаговые инструкции: Я проведу вас через написание эффективного письма-самопрезентации, мотивационного письма и резюме."
+            "1": "Подготовка документов: Я помогу вам написать сопроводительное письмо (자기소개서), мотивационное письмо (지원동기), и создать портфолио, соответствующее стандартам корейских компаний.",
+            "2": "Реальные примеры и личный опыт: Поделюсь с вами своим опытом успешного поиска работы в Корее, включая советы по подготовке документов и созданию резюме и портфолио.",
+            "3": "Преодоление страхов и барьеров: Многие иностранные студенты сомневаются или боятся подавать заявки в корейские компании, но я помогу вам сделать первый шаг — подготовиться и нажать кнопку `지원`` (подать заявку). Узнайте, как преодолевать барьеры и находить возможности на корейском рынке труда, даже если вы начинаете с нуля."
         },
         "facts": {
             "title": "Факты обо мне:",
-            "1": "Культурные инсайты: Узнайте, как привести ваше заявление в соответствие с корпоративной культурой Кореи.",
-            "2": "В настоящее время работаю инженером-программистом в Сеуле.",
-            "3": "Окончила факультет компьютерной инженерии в феврале этого года, подала заявку на участие в международной ярмарке вакансий KOTRA и получила предложение на стажировку в качестве инженера-программиста еще до завершения обучения. Прошла стажировку в последнем семестре, после окончания учебы подала заявку на визу E7 и получила официальный контракт от той же компании.",
-            "4": "Выиграла стипендию GKS Корейского правительства для получения степени бакалавра по компьютерным наукам и получила 6-й уровень TOPIK по корейскому языку."
+            "1": "Выиграла стипендию GKS Корейского правительства на получение степени бакалавра по компьютерным наукам и достигла 6 уровня TOPIK по корейскому языку.",
+            "2": "Получила предложение о стажировке на KOTRA Global Job Fair до окончания учебы. Пройдя стажировку в последнем семестре, оформила визу E7 с официальным контрактом от той же компании после выпуска.",
+            "3": "Увлекаюсь разработкой креативного и интересного программного обеспечения",
+            "4": "Люблю вдохновлять и мотивировать людей своей историей!"
         }
     },
     "alisher": {
         "title": "Алишер - Инженер-программист",
-        "description": "Всем привет! Я Алишер, в настоящее время работаю инженером-программистом в Южной Корее. В прошлом году я участвовал в Global Talent Fair и получил более 7 предложений о работе. Я рад поделиться своим опытом и советами о том, как успешно проходить собеседования.",
+        "description": "После получения степени в области компьютерных наук я начал карьеру инженера-программиста в Южной Корее. Рынок труда здесь предъявляет много вызовов, но благодаря опыту и стратегической подготовке я получил более 7 предложений о работе на ярмарке вакансий KOTRA и приобрел ценный опыт. Теперь я здесь, чтобы поделиться этими стратегиями с вами—помочь вам успешно пройти собеседования, создать сильное резюме и портфолио, и найти свою первую работу.",
         "offer": {
             "title": "Что я могу предложить:",
             "1": "Стратегии прохождения собеседований: Практические советы от человека, который прошел более 20 собеседований на ярмарке вакансий KOTRA, через приложения для поиска работы и по рекомендациям университетских преподавателей 🧑‍🏫",
-            "2": "Инсайты по предложениям о работе: Узнайте, как я получил несколько предложений и как вы тоже можете это сделать.",
-            "3": "Руководство по техническим навыкам: Какие навыки ищут корейские компании и как их продемонстрировать."
+            "2": "Инсайты по предложениям о работе: Узнайте, какие стратегии и методы я использовал, чтобы получить несколько предложений о работе, и как вы можете применить эти подходы в своей карьере.",
+            "3": "Руководство по техническим навыкам: Какие навыки ищут корейские компании и как их эффективно продемонстрировать."
         },
         "facts": {
             "title": "Факты обо мне:",
-            "1": "Участвовал в Global Talent Fair и получил более 7 предложений о работе.",
-            "2": "Руководил международными студентами в компании Daewoong в программе ИИ и Больших данных.",
-            "3": "В настоящее время работаю инженером-программистом в Сеуле."
+            "1": "В настоящее время работаю инженером-программистом в Сеуле.",
+            "2": "Прошел стажировку в одной из крупных компаний Кореи, Daewoong.",
+            "3": "Руководил международными студентами в компании Daewoong в программе ИИ и Больших данных, также выступал в качестве интервьюера во время стажировки.",
+            "4": "Увлечен backend-разработкой и наставничеством, помогая другим добиваться успеха на конкурентном корейском рынке труда."
         }
     },
     "activation": {
