--- a/src/assets/language/en.json
+++ b/src/assets/language/en.json
@@ -20,7 +20,7 @@
         "9": "Additional bonuses"
     },
     "kumush": {
-        "title": "Kumushai - Software Engineer & Guide Creator",
+        "title": "Kumushai - Software Engineer",
         "description": "Hello! I’m Kumush, a software engineer in Seoul, South Korea. After graduating with a degree in Computer Science from Jeonju University, I, like many international students, faced challenges in finding a job in Korea. But by understanding the Korean approach to employment and participating in the KOTRA Global Talent Fair, I managed to secure several job offers. Now, I’m here to share my experience and help you find a job in Korea!",
         "offer": {
             "title": "How Can I Help You?",
