--- a/src/assets/language/ru.json
+++ b/src/assets/language/ru.json
@@ -20,7 +20,7 @@
         "9": "9. Дополнительные бонусы"
     },
     "kumush": {
-        "title": "Кумушай - Инженер-программист и Создатель Гайдов",
+        "title": "Кумушай - Инженер-программист",
         "description": "Привет! Я Кумуш, инженер-программист в Сеуле, Южная Корея. После окончания факультета компьютерных наук в Университете Чонджу, как и многие иностранные студенты, я столкнулась с трудностями в поиске работы в Корее. Но, изучив корейский подход к трудоустройству и благодаря участию в KOTRA Global Talent Fair, я смогла получить несколько предложений о работе. Теперь я здесь, чтобы поделиться своим опытом и помочь вам найти работу в Корее!",
         "offer": {
             "title": "Что я могу предложить:",
