--- a/src/assets/language/en.json
+++ b/src/assets/language/en.json
@@ -30,7 +30,7 @@
         },
         "facts": {
             "title": "Facts About Me:",
-            "1": "Document Preparation: I can help you write a cover letter (자기소개서), motivation letter (지원동기), and create a portfolio that meets the standards of Korean companies.",
+            "1": "Awarded the Korean Government's GKS Scholarship for a bachelor’s degree in Computer Science and achieved TOPIK level 6 in Korean.",
             "2": "Received an internship offer at the KOTRA Global Job Fair before graduation. I completed my internship in the final semester and obtained an E7 visa with an official contract from the same company after graduation.",
             "3": "Passionate about developing creative and engaging software.",
             "4": "Love inspiring and motivating people with my story!"
