--- a/src/assets/language/ru.json
+++ b/src/assets/language/ru.json
@@ -56,7 +56,8 @@
     "activation": {
         "hi": "Привет",
         "description": "Пожалуйста, введите ваш активационный код ниже.",
-        "button": "Активировать"
+        "button": "Активировать",
+        "empty_field": "Пожалуйста, введите ваш код активации!"
     },
     "pricing": {
         "basic_plan": {
@@ -210,6 +211,24 @@
                 "question": "Могу ли я участвовать в ярмарке вакансий, если я все еще учусь в университете?",
                 "answer": "Да, и это настоятельно рекомендуется! Участие на раннем этапе поможет вам получить опыт собеседований, а также ярмарка предложит полезные ресурсы, такие как консультации по найму, лекции от опытных сотрудников и корпоративные презентации, которые помогут вам подготовиться к будущему поиску работы."
             }
+        }
+    },
+    "payment_process": {
+        "step1": {
+            "title": "Переведите 19,000 вон на следующий счет:",
+             "name": "Имя: NAZHIMIDIN",
+            "bank": "Jeonbuk Bank / 전북은행: 1013-01-4805312"
+        },
+        "step2": {
+            "title": "Отправьте нам чек перевода или скриншот в личные сообщения на Instagram.",
+            "description": "@ali____0151 или @kumushn_ или на почту support@solutionaix.com"
+        },
+        "step3": {
+            "title": "Мы отправим вам одноразовый код для активации.",
+            "description": "Пожалуйста, не делитесь этим кодом, так как он одноразовый. После активации его невозможно будет использовать повторно."
+        },
+        "step4": {
+            "title": "После активации вы получите доступ ко всем материалам."
         }
     },
     "error": {
