--- a/src/assets/language/ru.json
+++ b/src/assets/language/ru.json
@@ -25,8 +25,8 @@
         "offer": {
             "title": "Что я могу предложить:",
             "1": "Подготовка документов: Я помогу вам написать сопроводительное письмо (자기소개서), мотивационное письмо (지원동기), и создать портфолио, соответствующее стандартам корейских компаний.",
-            "2": "Реальные примеры и личный опыт: Поделюсь с вами своим опытом успешного поиска работы в Корее, включая советы по подготовке документов и созданию резюме и портфолио.",
-            "3": "Преодоление страхов и барьеров: Многие иностранные студенты сомневаются или боятся подавать заявки в корейские компании, но я помогу вам сделать первый шаг — подготовиться и нажать кнопку `지원`` (подать заявку). Узнайте, как преодолевать барьеры и находить возможности на корейском рынке труда, даже если вы начинаете с нуля."
+            "2": "Реальные примеры и личный опыт: Поделюсь с вами своим опытом успешного поиска работы в Корее, включая советы по подготовке документов и созданию резюме.",
+            "3": "Преодоление страхов и барьеров: Многие иностранные студенты сомневаются или боятся подавать заявки в корейские компании, но я помогу вам сделать первый шаг —  подготовиться и нажать кнопку  `지원` (подать заявку). Узнайте, как преодолевать барьеры и находить возможности на корейском рынке труда, даже если вы начинаете с нуля."
         },
         "facts": {
             "title": "Факты обо мне:",
