--- a/src/assets/language/en.json
+++ b/src/assets/language/en.json
@@ -26,7 +26,7 @@
             "title": "How Can I Help You?",
             "1": "Document Preparation: I can help you write a cover letter (자기소개서), motivation letter (지원동기), and create a portfolio that meets the standards of Korean companies.",
             "2": "Real Examples and Personal Experience: I’ll share my successful job search experience in Korea, including tips on preparing documents, and creating resumes.",
-            "3": "Overcoming Fears and Barriers:** Many international students hesitate or fear applying to Korean companies, but I’ll help you take that first step—prepare and hit the `지원` (apply) button. Learn how to overcome barriers and find opportunities in the Korean job market, even if you’re starting from scratch."
+            "3": "Overcoming Fears and Barriers: Many international students hesitate or fear applying to Korean companies, but I’ll help you take that first step—prepare and hit the `지원` (apply) button. Learn how to overcome barriers and find opportunities in the Korean job market, even if you’re starting from scratch."
         },
         "facts": {
             "title": "Facts About Me:",
