--- a/src/assets/language/ru.json
+++ b/src/assets/language/ru.json
@@ -32,7 +32,7 @@
             "title": "Факты обо мне:",
             "1": "Выиграла стипендию GKS Корейского правительства на получение степени бакалавра по компьютерным наукам и достигла 6 уровня TOPIK по корейскому языку.",
             "2": "Получила предложение о стажировке на KOTRA Global Job Fair до окончания учебы. Пройдя стажировку в последнем семестре, оформила визу E7 с официальным контрактом от той же компании после выпуска.",
-            "3": "Увлекаюсь разработкой креативного и интересного программного обеспечения",
+            "3": "Увлекаюсь разработкой креативного и интерактивного программного обеспечения",
             "4": "Люблю вдохновлять и мотивировать людей своей историей!"
         }
     },
@@ -67,6 +67,7 @@
         "basic_plan": {
             "title": "Полный гайд",
             "price": "₩25 000 вон",
+            "sale_description": "Специальное предложение к запуску гайда! 🚀",
             "features": {
                 "1": "Полный доступ ко всем материалам и технической поддержке.",
                 "2": "Доступ к личной странице на удобном сайте с бесконечным доступом к материалам.",
