--- a/src/assets/language/ru.json
+++ b/src/assets/language/ru.json
@@ -144,7 +144,7 @@
             "registration_failed": "Регистрация не удалась. Пожалуйста, попробуйте еще раз.",
             "network_error": "Ошибка сети. Пожалуйста, проверьте подключение и попробуйте снова.",
             "server_error": "Ошибка сервера. Пожалуйста, попробуйте позже.",
-            "registration_successful": "Регистрация прошла успешно. Пожалуйста, проверьте вашу почту для подтверждения."
+            "registration_successful": "Регистрация прошла успешно."
         }
     },
     "reset_password": {
